--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
   margin: 6px;
   padding:5px;
   text-align: center;
-  
 }
 
 .box button{
@@ -23,7 +22,7 @@
   text-align: center;
   display: block;
   margin: 0 auto;
-  margin-top:25px;
+  margin-top:20px;
   padding: 6px 15px 6px 15px;
   font-size: 14px;
   /*font-weight: bold;*/
@@ -31,6 +30,12 @@
   color: white;
   border-style: hidden;
   border-radius: 3px;
+}
+
+.box a{
+  top:10px;
+  font-size: 12px;
+  color:black;
 }
 
 body {
@@ -43,8 +48,8 @@ body {
 h1 {
   text-align: center;
   font-family: Helvetica, Sans-Serif;
-  font-size: 30px;
-  color: black;
+  font-size: 50px;
+  color: #A48686;
 }
 
 h2{
