--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,33 @@
 .box {
   display: block;
   margin: 0 auto;
-  width:200px;
+  width: 300px;
+  height: 225px;
   border-radius: 5px;
   margin-bottom: 20px;
   padding: 30px;
   text-align: center;
+  background-color: white;
+  box-shadow: 0 0px 15px 0px rgba(0, 0, 0, 0.24),
+    0px 0px 0px 0px rgba(0, 0, 0, 0.19);
+}
+
+.box input {
+  border: 2px hidden black;
+  margin: 6px;
+  width: 250px;
+  padding: 10px;
+  text-align: center;
   background-color: #e6f0f0;
 }
 
-.box input{
-  border: 2px hidden black;
-  margin: 6px;
-  padding:5px;
-  text-align: center;
-}
-
-.box button{
+.box button {
   display: flex;
   flex-wrap: wrap;
   text-align: center;
   display: block;
   margin: 0 auto;
-  margin-top:20px;
+  margin-top: 20px;
   padding: 6px 15px 6px 15px;
   font-size: 14px;
   /*font-weight: bold;*/
@@ -32,31 +37,197 @@
   border-radius: 3px;
 }
 
-.box a{
-  top:10px;
+.box a {
+  top: 10px;
   font-size: 12px;
-  color:black;
+  color: black;
 }
 
 body {
   font-family: helvetica, sans-serif;
   margin: 9%;
-  text-align:center;
-  color:black;
+  text-align: center;
+  color: black;
 }
 
 h1 {
   text-align: center;
   font-family: Helvetica, Sans-Serif;
-  font-size: 50px;
+  font-size: 70px;
   color: #A48686;
+  /*text-shadow: 0px 0px 4px #000000;*/
 }
 
-h2{
+h2 {
   text-align: center;
   font-family: Helvetica, Sans-Serif;
   font-size: 24px;
-  padding:0px;
-  margin:0px 0px 20px 0px;
+  padding: 0px;
+  margin: 0px 0px 20px 0px;
   color: black;
+}
+
+.navbar {
+  position: absolute;
+  overflow: hidden;
+  border-style: none;
+  border-radius: 0px;
+  width: 100%;
+  hright: 100px;
+  background-color: #e6f0f0;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  left: 0px;
+  top: 0px;
+}
+
+/* Style the links inside the navigation bar */
+.navbar a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 18px 20px;
+  text-decoration: none;
+  font-size: 18px;
+  font-family: Helvetica, Sans-Serif;
+}
+
+/* Change the color of links on hover */
+.navbar a:hover {
+  background-color: #c8e0e8;
+  color: black;
+  text-decoration: none;
+}
+/* Change the color of links on hover */
+.navbar a:click {
+  background-color: white;
+  color: #dbdbce;
+}
+/* Add an active class to highlight the current page 
+.topnav a.active {
+  background-color: #cadbd4;
+  color: black;
+}*/
+
+/* Hide the link that should open and close the topnav on small screens */
+.navbar .icon {
+  display: none;
+}
+
+@media screen and (max-width: 800px) {
+  .navbar a:not(:first-child) {
+    display: none;
+  }
+  .navbar a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .navbar.responsive {
+    position: relative;
+  }
+  .navbar.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .navbar.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+.box2 {
+  float: left;
+  margin-top: 100px;
+  display: block;
+  width: 40%;
+  margin-left: 50px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 30px;
+  text-align: center;
+  background-color: #C4E0F9;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.box2 button{
+  text-align:center; 
+  float:right;
+  margin-bottom:10px;
+  padding:3px;
+  font-size:13px;
+  border-radius:3px;
+  background-color:black;
+  color:white;
+  font-family: Helvetica, Sans-Serif;
+}
+
+.box2 p{
+  text-align:center; 
+  font-family: Helvetica, Sans-Serif;
+}
+
+.leaderboard {
+  float: right;
+  margin-top: 100px;
+  display: block;
+  width: 40%;
+  margin-right: 50px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 30px;
+  text-align: center;
+  background-color: #C4E0F9;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+.leaderboard h3{
+  font-size:14px;
+  background-color:white;
+  border-radius:2px;
+  padding:15px;
+}
+
+.logo a {
+  text-align: center;
+  font-family: Helvetica, Sans-Serif;
+  font-size: 22px;
+  color: #A48686;
+}
+
+.wrapper {
+  width: 500px;
+}
+
+.progress-bar {
+  width: 100%;
+  background-color: #e0e0e0;
+  padding: 3px;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
+}
+
+.progress-bar-fill {
+  display: block;
+  height: 22px;
+  background-color: #659cef;
+  border-radius: 3px;
+
+  transition: width 500ms ease-in-out;
+}
+
+#myBar {
+  width: 10%;
+  height: 30px;
+  background-color: #4CAF50;
+  text-align: center; /* To center it horizontally (if you want) */
+  line-height: 30px; /* To center it vertically */
+  color: white;
 }
