added form submission

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ h2 {
   border-style: none;
   border-radius: 0px;
   width: 100%;
-  hright: 100px;
+  height: 100px;
   background-color: #e6f0f0;
   box-sizing: border-box;
   margin: 0px;
