--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   display: block;
   margin: 0 auto;
   width: 300px;
-  height: 225px;
+  height: auto;
   border-radius: 5px;
   margin-bottom: 20px;
   padding: 30px;
@@ -12,13 +12,23 @@
     0px 0px 0px 0px rgba(0, 0, 0, 0.19);
 }
 
-.box input {
+input {
   border: 2px hidden black;
   margin: 6px;
   width: 250px;
   padding: 10px;
   text-align: center;
   background-color: #e6f0f0;
+}
+
+.group input{
+  border: 2px hidden black;
+  margin: 6px;
+  width: 400px;
+  padding: 20px;
+  font-size:20px;
+  text-align: center;
+  background-color: #e6f0f0;  
 }
 
 .box button {
@@ -73,7 +83,7 @@ h2 {
   border-style: none;
   border-radius: 0px;
   width: 100%;
-  height: 100px;
+  hright: 100px;
   background-color: #e6f0f0;
   box-sizing: border-box;
   margin: 0px;
@@ -116,30 +126,8 @@ h2 {
   display: none;
 }
 
-@media screen and (max-width: 800px) {
-  .navbar a:not(:first-child) {
-    display: none;
-  }
-  .navbar a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .navbar.responsive {
-    position: relative;
-  }
-  .navbar.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .navbar.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+.profile{
+  float:right;
 }
 
 .box2 {
@@ -198,7 +186,8 @@ h2 {
 .logo a {
   text-align: center;
   font-family: Helvetica, Sans-Serif;
-  font-size: 22px;
+  font-size: 18px;
+  font-weight:bold;
   color: #A48686;
 }
 
@@ -230,4 +219,32 @@ h2 {
   text-align: center; /* To center it horizontally (if you want) */
   line-height: 30px; /* To center it vertically */
   color: white;
+}
+
+.box3 {
+  float: center;
+  margin-top: 60px;
+  display: block;
+  width: 90%;
+  margin-left: 50px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 30px;
+  text-align: center;
+  background-color: #C4E0F9;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.box4{
+  font-size:14px;
+  background-color:white;
+  border-radius:2px;
+  padding:10px;
+  margin:10px;
+}
+
+th{
+  text-align:center;
+  float:center;
 }
