--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,7 @@ h2 {
   border-style: none;
   border-radius: 0px;
   width: 100%;
-  hright: 100px;
-  background-color: #e6f0f0;
+  background-color: #c4e0f9;
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
@@ -106,7 +105,7 @@ h2 {
 
 /* Change the color of links on hover */
 .navbar a:hover {
-  background-color: #c8e0e8;
+  background-color: #d5e7f7;
   color: black;
   text-decoration: none;
 }
@@ -128,6 +127,7 @@ h2 {
 
 .profile{
   float:right;
+  text-align:right;
 }
 
 .box2 {
@@ -135,7 +135,7 @@ h2 {
   margin-top: 100px;
   display: block;
   width: 40%;
-  margin-left: 50px;
+  margin-left: 100px;
   border-radius: 5px;
   margin-bottom: 20px;
   padding: 30px;
@@ -158,7 +158,8 @@ h2 {
 }
 
 .box2 p{
-  text-align:center; 
+  text-align:left; 
+  margin-left:5px;
   font-family: Helvetica, Sans-Serif;
 }
 
@@ -167,7 +168,7 @@ h2 {
   margin-top: 100px;
   display: block;
   width: 40%;
-  margin-right: 50px;
+  margin-right: 100px;
   border-radius: 5px;
   margin-bottom: 20px;
   padding: 30px;
@@ -248,3 +249,5 @@ th{
   text-align:center;
   float:center;
 }
+
+
