--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,14 @@ h2 {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
-.leaderboard h3, .group h3{
+.leaderboard h3{
+  font-size:14px;
+  background-color:white;
+  border-radius:2px;
+  padding:15px;
+}
+
+.group h3{
   font-size:14px;
   background-color:white;
   border-radius:2px;
@@ -228,6 +235,21 @@ h2 {
   display: block;
   width: 90%;
   margin-left: 50px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 30px;
+  text-align: center;
+  background-color: #C4E0F9;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.box13 {
+  float: center;
+  margin: auto;
+  margin-top: 60px;
+  display: block;
+  width: 60%;
   border-radius: 5px;
   margin-bottom: 20px;
   padding: 30px;
