--- a/css/style.css
+++ b/css/style.css
@@ -289,3 +289,18 @@ th{
   text-align: center;
   background-color: #e6f0f0;
 }
+
+.healthscore{
+  float: center;
+  margin:auto;
+  margin-top: 100px;
+  display: block;
+  width: 60%;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  padding: 30px;
+  text-align: center;
+  background-color: #C4E0F9;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
