--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@ input {
   width: 400px;
   border-radius: 50%;
   background-color: lightblue;
-  margin-top: 5%;
-  margin-left: 10%;
+  top: 50;
+  left: 100;
   background-size: cover;
   position: absolute;
 }
