--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@ input {
   width: 400px;
   border-radius: 50%;
   background-color: lightblue;
-  top: 50;
-  left: 300;
+  margin-top: 5%;
+  margin-left: 25%;
   background-size: cover;
   position: absolute;
 }
