--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ input {
   border-radius: 50%;
   background-color: lightblue;
   top: 5%;
-  margin-left: 5%;
+  margin-left: 3%;
   background-size: cover;
   position: absolute;
   z-index: -1;
@@ -173,6 +173,7 @@ h1 {
   font-family: Helvetica, Sans-Serif;
   font-size: 70px;
   color: #A48686;
+  margin-bottom: 0px;
   /*text-shadow: 0px 0px 4px #000000;*/
 }
 
